# cavansite

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
actions/build-and-package/: action.yml
actions/find-qt-version/: action.yml
breeze/template/: stylesheet.qss.in
breeze/theme/: dark-mono-alt.json  dark-mono.json  dark-orange-alt.json  dark-orange.json  dark-yellow-alt.json  dark-yellow.json  light-mono-alt.json  light-mono.json  light-orange-alt.json  light-orange.json  light-yellow-alt.json  light-yellow.json
cmake/: breeze.cmake
include/cavansite/: cavansite.hpp
include/cavansite/breeze/: BreezeIconsInterface.hpp  BreezeManager.hpp  BreezeTheme.hpp  BreezeThemeWindow.hpp  breeze.hpp
include/cavansite/breeze/impl/: macro-check.hpp
include/cavansite/classes/: CApplication.hpp  HelpButton.hpp  classes.hpp
include/cavansite/classes/singletons/: SettingsManager.hpp  singletons.hpp
include/cavansite/utils/: utils.hpp
include/cavansite/utils/except/: Exception.hpp  InterfaceException.hpp  SettingsException.hpp  except.hpp
pch/: namespace.hpp
resources/breeze/: qresource.qrc
src/breeze/: BreezeIconsInterface.cpp  BreezeManager.cpp  BreezeThemeWindow.cpp
src/classes/: CApplication.cpp  HelpButton.cpp
src/classes/singletons/: SettingsManager.cpp
src/utils/except/: Exception.cpp
